tests/errors/duplicate_names.vir
// Tests for DuplicateItem and DuplicateSlot.

// Two modules with the same name in the same file = DuplicateItem.
// Only the second (re-)declaration is flagged.
mod Alpha {
    outgoing out : Bit
    out := true
}

// CHECK: Duplicate Item
mod Alpha {
    outgoing out : Bit
    out := false
}

// An enum whose second definition repeats an enumerant name = DuplicateSlot.
// CHECK: Duplicate slot
enum type Color width 2 {
    Red   = 0;
    Green = 1;
    Red   = 2;
}

// A module with a unique name — no DuplicateItem.
// CHECK-NOT: Duplicate Item
mod Beta {
    outgoing out : Bit
    out := true
}

// An enum with all unique enumerants — no DuplicateSlot.
// CHECK-NOT: Duplicate slot
enum type Direction width 2 {
    North = 0;
    South = 1;
    East  = 2;
    West  = 3;
}

// CHECK: Check failed
